--- a/tictactoe/tictactoe.css
+++ b/tictactoe/tictactoe.css
@@ -41,7 +41,7 @@ font-family: 'Indie Flower', cursive; */
 .titletext {
     text-align: center;
     color: #FFFFFF;
-    margin-top: 10px;
+    margin-top: 20px;
     margin-bottom: 10px;
 }
 
@@ -58,19 +58,36 @@ body {
     font-family: 'Open Sans Condensed', sans-serif;
 }
 
+#controls {
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
 #button {
-    margin: 30px auto 0;
-    padding: 20px 25px;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    
+    padding: 40px;
+    padding-right: 10px;
     background-color: #000000;
     color: #FFFFFF;
-    font-size: 14px;
+    font-family: 'Open Sans Condensed', sans-serif;
+    font-size: 2em;
     text-align: center;
     border: 1px solid #FFFFFF;
     text-transform: uppercase;
     text-decoration: none;
-    letter-spacing: 5px;
-    outline: none;  
-    margin-left: 200px;
+    letter-spacing: 25px;
+    outline: none;
+    cursor: pointer;
 }
 
 #button:hover {
@@ -78,6 +95,30 @@ body {
     background-color: #FFFFFF;
     color: #000000;
     text-decoration: underline;
+}
+
+#button span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+#button span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -35px;
+}
+
+#button:hover span {
+  padding-right: 35px;
+}
+
+#button:hover span:after {
+  opacity: 1;
+  right: 0;
 }
 
 /*Lightbox*/
@@ -106,6 +147,7 @@ body {
     width: 30px;
     height: 30px;
     z-index: 2;
+    cursor: pointer;
 }
 
 #positionMessage {
