--- a/pong/pong/pong.css
+++ b/pong/pong/pong.css
@@ -5,7 +5,7 @@
 body {
   font-family: 'Open Sans Condensed', sans-serif;
   text-shadow: 0px 0px 7px white;
-
+  background-color: #000000;
 }
 
 #gameBoard {
@@ -18,6 +18,7 @@ body {
 #header {
   width: 100%;
   height: 10vh;
+  margin-top: 0px;
   color: #FFFFFF;
   background-color: #000000;
   border-bottom-style: solid;
@@ -80,6 +81,14 @@ body {
 }
 
 /*** Control Panel***/
+
+#rules {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  z-index: 1;
+}
+
 #controlpanel {
   position: absolute;
   top: 10px;
