--- a/hoshi/adventure.css
+++ b/hoshi/adventure.css
@@ -1,10 +1,172 @@
 /*Fonts*/
 @import url('https://fonts.googleapis.com/css2?family=Indie+Flower&family=Open+Sans+Condensed:wght@300&display=swap');
-/*font-family: 'Open Sans Condensed', sans-serif;*/
+@import url('https://fonts.googleapis.com/css2?family=Crafty+Girls&family=Give+You+Glory&family=Homemade+Apple&family=Sacramento&display=swap');
+/*font-family: 'Open Sans Condensed', sans-serif;
+font-family: 'Crafty Girls', cursive;
+font-family: 'Give You Glory', cursive;
+font-family: 'Homemade Apple', cursive;
+font-family: 'Sacramento', cursive;*/
 
 body {
   background-color: #000000;
   font-family: 'Open Sans Condensed', sans-serif;
+}
+
+h1 {
+  font-family: 'Homemade Apple', cursive;
+  text-decoration: none;
+  font-weight: 100;
+  font-size: 3em;
+  padding: 200px;
+}
+
+.screen {
+  color: white;
+  background-color: #052F39;
+  text-align: center;
+}
+
+a {
+  color: white;
+}
+
+.sidenav {
+  height: 100%;
+  width: 0;
+  top: 0;
+  left: 0;
+  position: fixed;
+  z-index: 1;
+  background-color: #111;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
+}
+
+.sidenav a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
+
+.sidenav a:hover {
+  color: #f1f1f1;
+}
+
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+
+#scores {
+  color: white;
+  font-size: 1em;
+  margin: 0px;
+}
+
+#level {
+  color: white;
+  font-size: 1em;
+  margin: 0px;
+}
+
+.background {
+  background-image: url("imgs/first.png");
+  height: 700px; 
+
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.backgroundb {
+  background-image: url("imgs/second.png");
+  min-height: 700px; 
+
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.backgroundc {
+  background-image: url("imgs/third.png");
+  min-height: 700px; 
+
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.backgroundd {
+  background-image: url("imgs/forth.png");
+  min-height: 700px; 
+
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.div{
+  height: 140px;
+  background-color: #052F39;
+  font-size: 1.5em;
+  margin-top: 70px;
+}
+
+#link {
+  display: inline-block;
+  padding: 7px;
+  width: 200px;
+  height: 50px;
+  background-color: #052F39;
+  color: white;
+  vertical-align: top;
+  text-align: center;
+  line-height: 50px;
+  font-size: 1.5em;
+  margin-bottom: 25px;
+
+  border: 1px solid #FFFFFF;
+  text-transform: uppercase;
+  text-decoration: none;
+  outline: none;
+  cursor: pointer;
+}
+
+#link:hover {
+  transition: 0.7s;
+  background-color: #FFFFFF;
+  color: #052F39;
+  text-decoration: underline;
+}
+
+#lose {
+  margin-top: 40vh;
+}
+
+.caption span.border {
+    background-color: #FFFFFFDF;
+    color: #000;
+    padding: 18px;
+    font-size: 25px;
+    letter-spacing: 10px;
+}
+.caption {
+    position: absolute;
+    left: 0;
+    top: 50%;
+    width: 100%;
+    text-align: center; 
 }
 
 #gameBoard {
@@ -27,93 +189,85 @@ body {
 }
 
 .rider {
-  background-image: url("imgs/rider.png")
+  background-image: url("imgs/rider.png");
 }
 
 .tree {
-  background-image: url("imgs/tree.png")
+  background-image: url("imgs/tree.png");
 }
 .rock {
-  background-image: url("imgs/rock.png")
+  background-image: url("imgs/rock.png");
 }
 .water {
-  background-image: url("imgs/water.png")
+  background-image: url("imgs/water.png");
 }
-
+.piece {
+  background-image: url(imgs/piece.png);
+}
+.fragment {
+  background-image: url(imgs/small.png);
+}
 .flag {
-  background-image: url("imgs/flag.png")
+  background-image: url("imgs/flag.png");
 }
 
 .fenceup {
-  background-image: url("imgs/fenceup.png")
+  background-image: url("imgs/fenceup.png");
 }
 .fenceside {
-  background-image: url("imgs/fenceside.png")
+  background-image: url("imgs/fenceside.png");
 }
 
 .horseup {
-  background-image: url("imgs/horseu.png")
+  background-image: url("imgs/horseu.png");
 }
 .horseleft {
-  background-image: url("imgs/horsel.png")
+  background-image: url("imgs/horsel.png");
 }
 .horseright {
-  background-image: url("imgs/horser.png")
+  background-image: url("imgs/horser.png");
 }
 .horsedown {
-  background-image: url("imgs/horsed.png")
-}
-
-.horseup2 {
-  background-image: url("imgs/horseu2.png")
-}
-.horseleft2 {
-  background-image: url("imgs/horsel2.png")
-}
-.horseright2 {
-  background-image: url("imgs/horser2.png")
-}
-.horsedown2 {
-  background-image: url("imgs/horsed2.png")
+  background-image: url("imgs/horsed.png");
 }
 
 .horserideup {
-  background-image: url("imgs/hru.png")
+  background-image: url("imgs/hru.png");
 }
 .horserideleft {
-  background-image: url("imgs/hrl.png")
+  background-image: url("imgs/hrl.png");
 }
 .horserideright {
-  background-image: url("imgs/hrr.png")
+  background-image: url("imgs/hrr.png");
 }
 .horseridedown {
-  background-image: url("imgs/hrd.png")
+  background-image: url("imgs/hrd.png");
 }
 
 .jumpup {
-  background-image: url("imgs/jumpu.png")
+  background-image: url("imgs/jumpu.png");
 }
 .jumpleft {
-  background-image: url("imgs/jumpl.png")
+  background-image: url("imgs/jumpl.png");
 }
 .jumpright {
-  background-image: url("imgs/jumpr.png")
+  background-image: url("imgs/jumpr.png");
 }
 .jumpdown {
-  background-image: url("imgs/jumpd.png")
+  background-image: url("imgs/jumpd.png");
 }
 
-.enemyup {
-  background-image: url("imgs/enemyu.png")
+.enemydown {
+  background-image: url("imgs/enemyu.png");
 }
 .enemyleft {
-  background-image: url("imgs/enemyl.png")
+  background-image: url("imgs/enemyl.png");
 }
 .enemyright {
-  background-image: url("imgs/enemyr.png")
+  background-image: url("imgs/enemyr.png");
 }
-.enemydown {
-  background-image: url("imgs/enemyd.png")
+.enemyup {
+  background-image: url("imgs/enemyd.png");
 }
 
 .bridge {
@@ -134,3 +288,103 @@ body {
   text-align: center;
   line-height: 100vh;
 }
+
+/*** Control Panel***/
+
+#rules {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  z-index: 1;
+}
+
+#controlpanel {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  z-index: 1;
+}
+
+.controls {
+  display: inline-block;
+  padding: 7px;
+  width: 90px;
+  height: 20px;
+  background-color: #000000;
+  color: white;
+  vertical-align: top;
+  text-align: center;
+  line-height: 20px;
+  font-size: 0.8em;
+
+  border: 1px solid #FFFFFF;
+  text-transform: uppercase;
+  text-decoration: none;
+  outline: none;
+  cursor: pointer;
+}
+
+.controls:hover {
+  transition: 0.7s;
+  background-color: #FFFFFF;
+  color: #000000;
+  text-decoration: underline;
+}
+
+/*** End Control Panel***/
+
+/*** Lightbox CSS ***/
+.hidden {
+  display: none;
+}
+
+.unhidden {
+  display: block;
+}
+
+#lightbox {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+  z-index: 2;
+}
+
+#x {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 30px;
+  height: 30px;
+  z-index: 2;
+  cursor: pointer;
+}
+
+#positionMessage {
+  position: absolute;
+  top: 45px;
+  left: 0px;
+  width: 100%;
+}
+
+#boundaryMessage {
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 30px;
+  width: 600px;
+  height: 200px;
+  background-color: rgba(255, 255, 255, 0.9);
+  border: thick solid #FFFFFF;
+  z-index: 3;
+}
+
+.titleText {
+  margin: 0px;
+  padding: 0px;
+  color: black;
+}
+
+/*** End Lightbox CSS ***/
