--- a/capstone/site.css
+++ b/capstone/site.css
@@ -175,6 +175,9 @@ section .text-container .text-box h3{
 #background3 {
   background-image: url("imgs/xq.png");
 }
+#background4 {
+  background-image: url("imgs/grad.png");
+}
 /*backgrounds end*/
 button {
   display: block;
@@ -352,3 +355,46 @@ div.container {
     transition-duration: 0.5s;
 }
 /*lightbox end*/
+
+/*slider*/
+
+.slidecontainer {
+  width: 100%; /* Width of the outside container */
+}
+
+/* Mouse-over effects */
+.slider:hover {
+  opacity: 1; /* Fully shown on mouse-over */
+}
+
+.slider {
+  -webkit-appearance: none;
+  width: 75%;
+  height: 15px;
+  border-radius: 5px;  
+  background: #d3d3d3;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%; 
+  background: white;
+  cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background: #04AA6D;
+  cursor: pointer;
+} 
+
+/*slider end*/
